# dagster-dag-factory

./: .gitignore  README.md  REFERENCE.md  WIKI.md  check_sftp.py  pyproject.toml  simulate_smart_sensor.py  test_concurrency.yaml  test_cron_macros.py  test_retry_policy.yaml  verify_factory.py  verify_logging_enrichment.py  verify_metadata_tags.py  verify_packaging.py  verify_retry_policy.py  verify_s3_compat.py  verify_s3_resource.py  verify_sensor_fix.py  verify_sql_fix.py  verify_sql_multi.py  verify_sql_s3_multi_pipeline.py  verify_template_fields.py  verify_v4_metadata.py  verify_v4_sensor.py  verify_variables.py
src/dagster_dag_factory/: cli.py
src/dagster_dag_factory/configs/: __init__.py  auto_materialize.py  base.py  compression.py  csv.py  database.py  enums.py  json_options.py  parquet.py  s3.py  sftp.py  snowflake.py  sqlserver.py
src/dagster_dag_factory/factory/: asset_factory.py  base_check.py  base_operator.py  check_registry.py  dagster_factory.py  job_factory.py  partition_factory.py  registry.py  resource_factory.py  schedule_factory.py  sensor_factory.py
src/dagster_dag_factory/models/: __init__.py  base.py  file_info.py  s3_info.py
src/dagster_dag_factory/operators/: __init__.py  base_operator.py  db_operator.py  s3_s3.py  s3_snowflake.py  s3_to_snowflake.py  sftp_s3.py  sftp_to_s3.py  sql_server_check.py  sql_to_s3.py  sqlserver_s3.py  (+1 more)
test_defs/: pipeline.yaml
tests/experimental/: verify_concurrency.py  verify_concurrency_pool.py  verify_job_tags.py
tests/integration/: system_check.py  test_factory_init.py  test_s3_listing.py  test_schemas.py
tests/prototypes/: debug_getfo.py  generate_stress_test_data.py  list_s3_objects.py  test_factory_integration.py  test_streaming_engine.py
tests/unit/: test_connections.py  test_data_quality.py  test_masking.py  test_rendering.py
(+28 files in other folders)
